# cuKan

./: .clang-format  .clangd  .gitignore  CMakeLists.txt
include/: bspline_forward.cuh  grid.h  kan_layer.h
src/: CMakeLists.txt  grid.cpp  main  main.cpp
src/kernels/: back  bspline_backward.cpp  forward.cpp
src/kernels/cuda/: bspline_forward.cu
src/layers/: kan_layer.cpp
tests/: CMakeLists.txt  test_grid.cpp
